--- a/index.html
+++ b/index.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Gemini Clone</title>
+	<meta name="description" content="Un clone de Gemini en utilisant HTML, CSS et JavaScript avec l'API de Gemini lui-même.">
+	<title>Demander ce que vous voulez - Gemini Clone</title>
 	<!-- CSS Link -->
 	<link rel="stylesheet" href="css/style.css">
+	<!-- Google Font Icon Link -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
 	<!-- Header -->
 	<header class="header">
+		<!-- Header Greetings -->
+		<h1 class="title">Bonjour, toi</h1>
+		<h2 class="subtitle">Comment puis-je vous aider aujourd'hui ?</h2>
 
+		<ul class="suggestionList">
+			<li class="suggestion">
+				<h3 class="text">Aime moi à organiser une fête avec mes 5 potes pour 100€.</h3>
+				<span class="icon material-symbols-rounded">
+					draw
+				</span>
+			</li>
+			<li class="suggestion">
+				<h3 class="text">Quelles sont les meilleurs conseils pour améliorer mes compétences à l'oral ?</h3>
+				<span class="icon material-symbols-rounded">
+					lightbulb
+				</span>
+			</li>
+			<li class="suggestion">
+				<h3 class="text">Peux-tu m'aider à trouver toutes les récentes news dans le milieu du développement ?</h3>
+				<span class="icon material-symbols-rounded">
+					explore
+				</span>
+			</li>
+			<li class="suggestion">
+				<h3 class="text">Écris-moi un code JavaScript pour afficher toutes les valeurs d'un array.</h3>
+				<span class="icon material-symbols-rounded">
+					code
+				</span>
+			</li>
+		</ul>
 	</header>
 
 	<!-- JS Link -->
