Added the header and the typing area to the HTML and added their respective CSS.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<h1 class="title">Bonjour, toi</h1>
 		<h2 class="subtitle">Comment puis-je vous aider aujourd'hui ?</h2>
 
+		<!-- Suggestion List -->
 		<ul class="suggestionList">
 			<li class="suggestion">
 				<h3 class="text">Aime moi à organiser une fête avec mes 5 potes pour 100€.</h3>
@@ -44,6 +45,24 @@
 			</li>
 		</ul>
 	</header>
+
+
+	<!-- Typing Area -->
+	<div class="typingArea">
+		<form action="#" class="typingForm">
+			<div class="inputWrapper">
+				<input type="text" placeholder="Entrer un prompt ici..." class="typingInput" required>
+				<button type="submit" class="icon material-symbols-rounded">send</button>
+			</div>
+			<div class="actionsButtons">
+				<span class="icon material-symbols-rounded">light_mode</span>
+				<span class="icon material-symbols-rounded">delete</span>
+			</div>
+		</form>
+		<p class="disclaimerText">
+			Gemini peut afficher des informations inexactes, y compris sur des personnes, alors vérifiez ses réponses.
+		</p>
+	</div>
 
 	<!-- JS Link -->
 	<script src="js/script.js" type="module"></script>
