Added the chat list to the index and his own CSS

--- a/index.html
+++ b/index.html
@@ -46,6 +46,35 @@
 		</ul>
 	</header>
 
+	<!-- Chat List / Container -->
+	<div class="chatList">
+		<div class="message outgoing">
+			<div class="messageContent">
+				<img src="assets/user.jpg" alt="User Image Of A Man" class="avatar">
+				<p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, aperiam!</p>
+			</div>
+		</div>
+		<div class="message incoming">
+			<div class="messageContent">
+				<img src="assets/gemini.svg" alt="Gemini Icon" class="avatar">
+				<p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, aperiam!</p>
+			</div>
+			<span class="icon material-symbols-rounded">content_copy</span>
+		</div>
+		<div class="message incoming loading">
+			<div class="messageContent">
+				<img src="assets/gemini.svg" alt="Gemini Icon" class="avatar">
+				<p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, aperiam!</p>
+				<div class="loadingIndicator">
+					<div class="loadingBar"></div>
+					<div class="loadingBar"></div>
+					<div class="loadingBar"></div>
+				</div>
+			</div>
+			<span class="icon material-symbols-rounded">content_copy</span>
+		</div>
+	</div>
+
 
 	<!-- Typing Area -->
 	<div class="typingArea">
