Added the dark/light mode, auto-scroll to the bottom and keep conversations in the local storage of the browser

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<button type="submit" class="icon material-symbols-rounded">send</button>
 			</div>
 			<div class="actionsButtons">
-				<span class="icon material-symbols-rounded">light_mode</span>
+				<span id="toggleThemeButton" class="icon material-symbols-rounded">light_mode</span>
 				<span class="icon material-symbols-rounded">delete</span>
 			</div>
 		</form>
