Added the delete messages function to the website

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			</div>
 			<div class="actionsButtons">
 				<span id="toggleThemeButton" class="icon material-symbols-rounded">light_mode</span>
-				<span class="icon material-symbols-rounded">delete</span>
+				<span id="deleteChatButton" class="icon material-symbols-rounded">delete</span>
 			</div>
 		</form>
 		<p class="disclaimerText">
